# zodex

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json  renovate.json  wrangler.docs.jsonc
.agents/gg/: lead-readme.md
.agents/skills/runpod-deployment/: SKILL.md
.agents/skills/runpod-deployment/agents/: openai.yaml
.agents/skills/sprites/: SKILL.md
.claude/: skills
.github/workflows/: container-release.yml  docs-worker.yml  release.yml  renovate.yml
docs/: agent-instructions.md  agent-sprites-setup-runbook.md  agent-vps-setup-runbook.md  deployment-notes.md  github-app-agent-auth.md  operator-guide.md  setup.md
gg/: go-sprites-redesign-feasibility-2026-06-26.md  zodex-rust-evolution-plan-2026-06-26.md
proxy/cloudflare-worker/: README.md  package.json  wrangler.jsonc
proxy/cloudflare-worker/src/: index.js
scripts/: check.sh  install.sh  mint-gh-app-installation-token.sh  setup-sprite.sh  sprite-services.sh  upgrade-sprite.sh
src/: client.rs  config.rs  content.config.ts  http_api.rs  protocol.rs  publisher.rs  server.rs  service.rs  session.rs
src/components/: SiteFooter.astro
src/content/docs/: access-model.md  architecture.md  changelog.md  command-reference.md  configuration.md  development.md  docs-site.md  github-apps.md  http-api.md  operator-grants.md  proxy-mcp.md  push-grants.md  quickstart.md  sprite-operations.md  tools.md  troubleshooting.md  write-modes.md
src/data/: docs.ts
src/pages/: docs.md.ts  index.astro  install.sh.ts
src/pages/docs/: [...slug].astro  index.astro
src/publisher/: api.rs  git.rs  github.rs  mod.rs  server.rs  tests.rs  validation.rs
src/session/: mod.rs  tests.rs
src/styles/: global.css
tests/: binary_manifest.rs  cli_parity.rs  github_app_scripts.rs  install_script.rs  phase1_binary_manifest.rs  phase6_cli_parity.rs  source_file_size.rs  sprite_scripts.rs  zodex_agent_cli.rs  zodex_operator_cli.rs
