[package]
name = "zodex"
version = "0.2.15"
edition = "2024"

[[bin]]
name = "zodex"
path = "src/bin/zodex.rs"

[[bin]]
name = "zodex-agent"
path = "src/bin/zodex-agent.rs"

[[bin]]
name = "git-remote-zodex"
path = "src/bin/git-remote-zodex.rs"

[[bin]]
name = "zodex-client"
path = "src/bin/zodex-client.rs"

[[bin]]
name = "zodexd"
path = "src/bin/zodexd.rs"

[[bin]]
name = "zodex-prd"
path = "src/bin/zodex-prd.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
codex-apply-patch = { git = "https://github.com/openai/codex.git", rev = "a265d6043edc8b41e42ae508291f4cfb9ed46805" }
jsonwebtoken = "9.3"
nix = { version = "0.30", features = ["fs", "signal", "process", "term", "user"] }
rand = "0.10"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider"] }
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
toml = "1.0"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4"
